# betastar

./: .dockerignore  .gitignore  .jargon.yml  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  spotty.yaml
.devcontainer/: devcontainer.json  supervisord.conf
betastar/: __main__.py  cli.py  data.py  env.py  player.py  random_agent.py
betastar/agents/: __init__.py  a2c.py  a3c.py  base_agent.py  full_ppo.py  move_ppo.py  ppo.py  random_agent.py  spatial_a2c.py  worker.py
betastar/envs/: __init__.py  collect_mineral_shards.py  env.py  move_env.py  move_to_beacon.py  movement_minigame.py  multiproc.py  sc2_game.py
betastar/models/: __init__.py  full_net.py  screen_net.py
docker/: Dockerfile.sc2
tests/: test_betastar.py
