[tool.poetry]
name = "betastar"
version = "0.1.0"
description = ""
authors = ["Joan Falcó", "Luis Martin", "Oriol Gual <oriol@gual.me>", "Txus Bach <me@txus.io>"]

[tool.poetry.dependencies]
python = "^3.9.4"
torch = "^1.8.1"
wandb = "^0.10.28"
click = "^7.1.2"
# Do not upgrade gym to 0.18+ until https://github.com/openai/gym/issues/1925 is solved
gym = "^0.17.3"
tqdm = "^4.60.0"
PySC2 = "^3.0.0"
tqdm-multiprocess = "^0.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.4b2"

[tool.poetry.scripts]
betastar = 'betastar.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
