[tool.poetry]
name = "betastar"
version = "0.1.0"
description = ""
authors = ["Joan Falcó", "Luis Martin", "Oriol Gual <oriol@gual.me>", "Txus Bach <me@txus.io>"]

[tool.poetry.dependencies]
python = "^3.9.4"
torch = "1.8.0"
wandb = "*"
click = "^7.1.2"
gym = "^0.18.3"
tqdm = "^4.60.0"
PySC2 = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.4b2"

[tool.poetry.scripts]
betastar = 'betastar.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
